<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.lilsmile.testplatformandroid.app.PerconalCabinet">

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonChooseTest"
            android:layout_centerHorizontal="true"
            android:text="@string/chooseTest"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCreateTest"
            android:layout_below="@+id/buttonChooseTest"
            android:layout_centerHorizontal="true"
            android:text="@string/createTest"
            />
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogout"
            android:layout_below="@+id/buttonCreateTest"
            android:layout_centerHorizontal="true"
            android:text="@string/logout"/>

</RelativeLayout>
